--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,9 @@ body { margin: 0; padding: 0; zoom: 1; }
 .eise {
     height: 380px;
     background: url(../img/eise.jpg) no-repeat left;
-    padding: 40px 20px 80px 20px;
+    background-attachment: fixed;
     background-size: cover;
+    padding: 40px 20px 80px 20px;
 }
 
 .eise h1{
