--- a/css/styles.css
+++ b/css/styles.css
@@ -110,8 +110,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 .eise {
     height: 380px;
-    background: url(../img/eise.jpg) no-repeat left;
-    background-attachment: fixed;
+    background: url(../img/eise.jpg) no-repeat top left;
     background-size: cover;
     padding: 40px 20px 80px 20px;
 }
